# serializer version: 1
# name: test_invalid_configuration
  dict({
    'exit_code': 3,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] ERROR    Configuration validation failed: 1 validation error for AshConfig
                            fail_on_findings
                              Input should be a valid boolean
                                For further information visit https://errors.pydantic.dev/<PYDANTIC_VERSION>/v/bool_type
      Invalid configuration: Configuration validation failed for 'bad.yaml': 1 validation error for
      AshConfig
      fail_on_findings
        Input should be a valid boolean
          For further information visit https://errors.pydantic.dev/<PYDANTIC_VERSION>/v/bool_type. Run 'ashx config
      lint' to identify and fix issues.
  
    ''',
  })
# ---
# name: test_no_results_file
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Loaded 2 converters, 10 scanners, and 15 reporters
      Error loading results file: expected str, bytes or os.PathLike object, not NoneType
  
    ''',
  })
# ---
# name: test_reporter_raised
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Loaded 2 converters, 10 scanners, and 15 reporters
                   INFO     Found reporter plugin TextReporter
      Error generating report: simulated reporter failure
  
    ''',
  })
# ---
# name: test_reporter_returned_nothing
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Loaded 2 converters, 10 scanners, and 15 reporters
                   INFO     Found reporter plugin TextReporter
      Error: reporter 'text' produced no report. See the log above for the reason.
  
    ''',
  })
# ---
# name: test_results_file_is_not_results
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Loaded 2 converters, 10 scanners, and 15 reporters
      Error loading results file: 1 validation error for AshAggregatedResults
      scanner_results
        Input should be an object
          For further information visit https://errors.pydantic.dev/<PYDANTIC_VERSION>/v/dict_type
  
    ''',
  })
# ---
# name: test_unknown_reporter
  dict({
    'exit_code': 1,
    'stderr': '',
    'stdout': '''
      [<LOG_TIME>] INFO     Loaded 2 converters, 10 scanners, and 15 reporters
      Error: Reporter plugin 'pdf' not found.
      Available reporter formats:
        - csv
        - cyclonedx
        - github-ghas
        - gitlab-cyclonedx
        - gitlab-sast
        - html
        - flat-json
        - junitxml
        - markdown
        - ocsf
        - sarif
        - spdx
        - text
        - unused-suppressions
        - yaml
  
    ''',
  })
# ---
